# ControlKinova

./: .gitignore  README.md  enviar_coordenada.sh  find_xacro_errors.py  fix_gripper.py  fix_xacro_blocks.py  fix_xacro_corruption.py  frames_2026-05-06_14.38.11.gv  gen3_fixed.xacro  iniciar_servidor.sh  install_ros2.sh  kinova_camera.py  kinova_move.py  kortex_robot_fixed.xacro  kortex_ros2_control_fixed.xacro  move_robot.sh  patch.py  patch_hardware.py  patch_xacro.py  pattern.txt  robotiq_fix_final.xacro  robotiq_fix_v2.xacro  test_move.py  wsl_list.txt  wsl_list_utf8.txt  xacro_errors.txt
Kinova seis movimientos/: SixMoves.srv  fastdds_config.xml  pick_and_place_node.py  run_node.sh  six_moves_node.py  test_pick_place.py  test_service.sh  test_six_moves.py
burger_delivery/: MARCO_CONCEPTUAL_MOVEIT2.md  MEJORAS_MOVIMIENTO_KINOVA.md  PRUEBAS_MOVIMIENTO.md  README.md  TALLER_URDF_TF.md  TODO.md  VISUALIZAR_URDF_WEB.md  build_burger.sh  lanzar_robot.sh  ros.md  ros_burger_delivery.md
burger_delivery/burger_description/: CMakeLists.txt  README.md  package.xml
burger_delivery/network_setup/: ANOMALIAS_HARDWARE.md  DIAGNOSTICO_RED.md  ROS2_NETWORK_CONFIG.md  analisis_trafico_ros2.sh  diagnostico_wifi.ps1  diagnostico_wifi.sh  drivers.txt  fastdds_discovery.xml  router_tplink_ax12_config.md  test_output.txt  test_ros2_network.sh  test_wan_access.sh
burger_delivery/ros2_setup/: INSTALACION_KORTEX.md  MAPA_DEPENDENCIAS.md  MAPA_DEPENDENCIAS_AI.md  MOVEIT_Y_ROS2_CONTROL.md  PROPUESTA_GEMINI_ER.md  verificar_ros2.md
kinova_apps/: CMakeLists.txt  package.xml
kinova_apps/kinova_apps/: robot_service_node.py
kinova_apps/launch/: robot_service.launch.py
kinova_apps/scripts/: test_service_client.py
kinova_apps/srv/: MoveAndCapture.srv  PickAndPlace.srv
(+13 files in other folders)
